--- a/index.html
+++ b/index.html
@@ -36,8 +36,14 @@
 
     <div class="header">
 
+      <!--  Blue tick  -->
+
       <div>
-        <!--  Left container space  -->
+        <div class="blue-tick-background">
+          <div class="blue-tick">
+            &#10004;
+          </div>
+        </div>
       </div>
 
       <!--  Qasim Mughal  -->
