--- a/About.html
+++ b/About.html
@@ -39,11 +39,7 @@
       <!--  Blue tick  -->
 
       <div>
-        <div class="blue-tick-background">
-          <div class="blue-tick">
-            &#10003;
-          </div>
-        </div>
+        <img class="blue-tick" src="Photos/Blue tick.png" alt="Verified">
       </div>
 
       <!--  Qasim Mughal  -->
