--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <meta name="author" content="Qasim Mughal">
     <meta name="description" content="@qasim26mughal social media accounts">
     <meta name="image" 
-      content="https://github.com/qasim26mughal/qasim26mughal/blob/qasim26mughal/favicon.jpeg?raw=true">
+      content="https://github.com/qasim26mughal/qasim26mughal/blob/qasim26mughal/Photos/Website%20Card.jpg?raw=true">
     <meta name="og:image" 
-      content="https://github.com/qasim26mughal/qasim26mughal/blob/qasim26mughal/favicon.jpeg?raw=true">
+      content="https://github.com/qasim26mughal/qasim26mughal/blob/qasim26mughal/Photos/Website%20Card.jpg?raw=true">
     <meta name="image:width" content="1200">
     <meta name="image:height" content="627">
     <meta name="card" content="summary_large_image">
