--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
       content="https://github.com/qasim26mughal/qasim26mughal/blob/qasim26mughal/Photos/Website%20Card.jpg?raw=true">
     <meta name="image:width" content="4238">
     <meta name="image:height" content="2831">
+    <meta name="og:image:width" content="4238">
+    <meta name="og:image:height" content="2831">
     <meta name="card" content="summary_large_image">
     <meta name="type" content="website">
     <meta name="robots" content="Qasim Mughal social media accounts, @qasim26mughal social media accounts">
