--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
       <div class="container">
         <img class="profile-photo" 
-              src="Photos/Facebook.jpg" 
+              src="Photos/facebook.jpg" 
               alt="Loading photo">
         <div class="username">qasim26mughal</div>
         <div>
