--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 
       <div class="container">
         <img class="profile-photo" 
-              src="Photos/snapchat.jpg" 
+              src="Photos/snapchat1.jpg" 
               alt="Loading photo">
         <div class="username">qasim26mughal</div>
         <div>
