--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
       <div class="container">
         <img class="profile-photo" 
-              src="Photos/Instagram.jpg" 
+              src="Photos/instagram.jpg" 
               alt="Loading photo">
         <div class="username">qasim26mughal</div>
         <div>
@@ -140,7 +140,7 @@
 
       <div class="container">
         <img class="profile-photo" 
-              src="Photos/Instagram.jpg" 
+              src="Photos/instagram.jpg" 
               alt="Loading photo">
         <div class="username">qasim26mughal</div>
         <div>
