--- a/YouTube channels.html
+++ b/YouTube channels.html
@@ -36,10 +36,10 @@
 
     <div class="header">
 
-      <!--  Blue tick  -->
+      <!--  Left space  -->
 
       <div>
-        <img class="blue-tick" src="Photos/Blue tick.png" alt="Verified">
+        
       </div>
 
       <!--  Qasim Mughal  -->
