--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
       <div class="container">
         <img class="profile-photo" 
-              src="Photos/TikTok.jpg" 
+              src="Photos/tiktok1.jpg" 
               alt="Loading photo">
         <div class="username">qasim26mughal</div>
         <div>
