--- a/YouTube channels.html
+++ b/YouTube channels.html
@@ -140,7 +140,7 @@
 
       <div class="container">
         <img class="profile-photo" 
-              src="Photos/youtube qasim26gamer.png" 
+              src="Photos/youtube qasim26gamer1.png" 
               alt="Loading photo">
         <div class="username">qasim26gamer</div>
         <div>
