--- a/Hashtags.html
+++ b/Hashtags.html
@@ -81,7 +81,7 @@
 
           <div>
             <a href="Hashtags.html">
-              <button class="hashtags">
+              <button class="menu-hashtags">
                 Hashtags
               </button>
             </a>
