--- a/index.html
+++ b/index.html
@@ -77,7 +77,16 @@
                 qasim26mughal
               </button>
             </a>
-          </div>
+          </div>
+
+           
+          <div>
+            <a href="Hashtags.html">
+              <button class="menu-hashtags">
+                Hashtags
+              </button>
+            </a>
+          </div>
 
           <div>
             <a href="About.html">
