--- a/About.html
+++ b/About.html
@@ -80,6 +80,14 @@
           </div>
 
           <div>
+            <a href="Hashtags.html">
+              <button class="menu-hashtags">
+                Hashtags
+              </button>
+            </a>
+          </div>
+
+          <div>
             <a href="About.html">
               <button class="menu-about">
                 About
