--- a/Hashtags.html
+++ b/Hashtags.html
@@ -105,7 +105,7 @@
       <!--  #qasim26mughal -->
 
       <div class="container">
-        #qasim26mughal
+                <div class="hashtag-1">#qasim26mughal</div>
       </div>
 
     </div>
