--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
       <div class="container">
         <img class="profile-photo" 
-              src="Photos/tiktok1.jpg" 
+              src="Photos/TikTok.jpg" 
               alt="Loading photo">
         <div class="username">qasim26mughal</div>
         <div>
@@ -125,7 +125,7 @@
 
       <div class="container">
         <img class="profile-photo" 
-              src="Photos/instagram.jpg" 
+              src="Photos/Instagram.jpg" 
               alt="Loading photo">
         <div class="username">qasim26mughal</div>
         <div>
@@ -141,7 +141,7 @@
 
       <div class="container">
         <img class="profile-photo" 
-              src="Photos/instagram.jpg" 
+              src="Photos/Instagram.jpg" 
               alt="Loading photo">
         <div class="username">qasim26mughal</div>
         <div>
@@ -157,7 +157,7 @@
 
       <div class="container">
         <img class="profile-photo" 
-              src="Photos/facebook.jpg" 
+              src="Photos/Facebook.jpg" 
               alt="Loading photo">
         <div class="username">qasim26mughal</div>
         <div>
@@ -169,11 +169,11 @@
         </div>
       </div>
 
-      <!--  YouTube qasim26mughal container -->
+      <!--  YouTube container  -->
 
       <div class="container">
         <img class="profile-photo" 
-              src="Photos/YouTube qasim26mughal.jpg" 
+              src="Photos/YouTube.jpg" 
               alt="Loading photo">
         <div class="username">qasim26mughal</div>
         <div>
@@ -189,7 +189,7 @@
 
       <div class="container">
         <img class="profile-photo" 
-              src="Photos/snapchat1.jpg" 
+              src="Photos/Snapchat.jpg" 
               alt="Loading photo">
         <div class="username">qasim26mughal</div>
         <div>
