--- a/Hashtags.html
+++ b/Hashtags.html
@@ -11,11 +11,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="keywords" 
-      content="youtube, channels, owned, by, of, qasim mughal, qasim26mughal, @qasim26mughal">
-    <meta name="title" content="YouTube channels">
+      content="hashtags, by, of, qasim mughal, qasim26mughal, @qasim26mughal">
+    <meta name="title" content="Hashtags">
     <meta name="url" content="https://qasim26mughal.github.io/qasim26mughal/Hashtags.html">
     <meta name="author" content="Hashtags">
-    <meta name="description" content="owned by Qasim Mughal @qasim26mughal">
+    <meta name="description" content="Hasgtags if you want to use">
     <meta name="image" 
       content="https://github.com/qasim26mughal/qasim26mughal/blob/qasim26mughal/favicon.jpeg?raw=true">
     <meta name="og:image" 
@@ -24,8 +24,8 @@
     <meta name="image:height" content="627">
     <meta name="card" content="summary_large_image">
     <meta name="type" content="website">
-    <meta name="robots" content="YouTube channels owned by Qasim Mughal, @qasim26mughal">
-    <meta name="googlebot" content="YouTube channels owned by Qasim Mughal, @qasim26mughal">
+    <meta name="robots" content="Hashtags by Qasim Mughal, @qasim26mughal">
+    <meta name="googlebot" content="Hashtags by Qasim Mughal, @qasim26mughal">
   </head>
 
   <!--  Site  -->
