--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html style="background-color: white;">
+<html style="background-color: grey;">
   <head>
     <!--  Title, links and meta  -->
 
