--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <title>@qasim26mughal</title>
 
-    <link rel="icon" type="favicon" href="favicon.jpeg">
+    <link rel="icon" type="favicon" href="favicon.jpg">
     <link rel="stylesheet" href="index.css">
 
     <meta charset="UTF-8">
