--- a/Hashtags.html
+++ b/Hashtags.html
@@ -5,7 +5,7 @@
 
     <title>Hashtags</title>
     
-    <link rel="icon" type="favicon" href="favicon.jpeg">
+    <link rel="icon" type="favicon" href="favicon.jpg">
     <link rel="stylesheet" href="Hashtags.css">
 
     <meta charset="UTF-8">
@@ -107,7 +107,8 @@
       <div class="container">
         <div class="hashtag-1">#qasim26mughal</div>
       </div>
-
+
+
     </div>
 
   </body>
