--- a/About.html
+++ b/About.html
@@ -5,7 +5,7 @@
 
     <title>About</title>
     
-    <link rel="icon" type="favicon" href="favicon.jpeg">
+    <link rel="icon" type="favicon" href="favicon.jpg">
     <link rel="stylesheet" href="About.css">
 
     <meta charset="UTF-8">
