--- a/Hashtags.html
+++ b/Hashtags.html
@@ -16,10 +16,10 @@
     <meta name="url" content="https://qasim26mughal.github.io/qasim26mughal/Hashtags.html">
     <meta name="author" content="Hashtags">
     <meta name="description" content="Hashtags by @qasim26mughal">
-    <meta name="image" 
-      content="https://github.com/qasim26mughal/qasim26mughal/blob/qasim26mughal/favicon.jpeg?raw=true">
+        <meta name="image" 
+      content="https://github.com/qasim26mughal/qasim26mughal/blob/qasim26mughal/Photos/Website%20Card.jpg?raw=true">
     <meta name="og:image" 
-      content="https://github.com/qasim26mughal/qasim26mughal/blob/qasim26mughal/favicon.jpeg?raw=true">
+      content="https://github.com/qasim26mughal/qasim26mughal/blob/qasim26mughal/Photos/Website%20Card.jpg?raw=true">
     <meta name="image:width" content="1200">
     <meta name="image:height" content="627">
     <meta name="card" content="summary_large_image">
