--- a/Hashtags.html
+++ b/Hashtags.html
@@ -15,8 +15,8 @@
     <meta name="title" content="Hashtags">
     <meta name="url" content="https://qasim26mughal.github.io/qasim26mughal/Hashtags.html">
     <meta name="author" content="Hashtags">
-    <meta name="description" content="Hashtags by @qasim26mughal">
-        <meta name="image" 
+    <meta name="description" content="by @qasim26mughal">
+    <meta name="image" 
       content="https://github.com/qasim26mughal/qasim26mughal/blob/qasim26mughal/Photos/Website%20Card.jpg?raw=true">
     <meta name="og:image" 
       content="https://github.com/qasim26mughal/qasim26mughal/blob/qasim26mughal/Photos/Website%20Card.jpg?raw=true">
