--- a/About.html
+++ b/About.html
@@ -3,7 +3,7 @@
   <head>
     <!--  Title, links and meta  -->
 
-    <title>About</title>
+    <title>About @qasim26mughal</title>
     
     <link rel="icon" type="favicon" href="favicon.jpg">
     <link rel="stylesheet" href="About.css">
@@ -12,9 +12,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="keywords" 
       content="about, qasim mughal, qasim26mughal, @qasim26mughal, email, gmail, id, of">
-    <meta name="title" content="About">
+    <meta name="title" content="About @qasim26mughal">
     <meta name="url" content="https://qasim26mughal.github.io/qasim26mughal/About.html">
-    <meta name="author" content="About">
+    <meta name="author" content="About @qasim26mughal">
     <meta name="description" content="qasim26mughal@gmail.com">
     <meta name="image" 
       content="https://github.com/qasim26mughal/qasim26mughal/blob/qasim26mughal/Photos/Website%20Card.jpg?raw=true">
