--- a/Hashtags.html
+++ b/Hashtags.html
@@ -3,7 +3,7 @@
   <head>
     <!--  Title, links and meta  -->
 
-    <title>Hashtags</title>
+    <title>Hashtags @qasim26mughal</title>
     
     <link rel="icon" type="favicon" href="favicon.jpg">
     <link rel="stylesheet" href="Hashtags.css">
