--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="keywords" 
       content="social, media, accounts, owned, by, of, qasim mughal, qasim26mughal, @qasim26mughal">
-    <meta name="title" content="Qasim Mughal">
+    <meta name="title" content="@qasim26mughal social account">
     <meta name="url" content="https://qasim26mughal.github.io/qasim26mughal/">
-    <meta name="author" content="Qasim Mughal">
-    <meta name="description" content="@qasim26mughal social media accounts">
+    <meta name="author" content="Qasim Mughal">
     <meta name="image" 
       content="https://github.com/qasim26mughal/qasim26mughal/blob/qasim26mughal/Photos/Website%20Card.jpg?raw=true">
     <meta name="og:image" 
