--- a/Hashtags.html
+++ b/Hashtags.html
@@ -12,9 +12,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="keywords" 
       content="hashtags, by, of, qasim mughal, qasim26mughal, @qasim26mughal">
-    <meta name="title" content="Hashtags">
+    <meta name="title" content="Hashtags @qasim26mughal">
     <meta name="url" content="https://qasim26mughal.github.io/qasim26mughal/Hashtags.html">
-    <meta name="author" content="Hashtags">
     <meta name="description" content="by @qasim26mughal">
     <meta name="image" 
       content="https://github.com/qasim26mughal/qasim26mughal/blob/qasim26mughal/Photos/Website%20Card.jpg?raw=true">
