--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <meta name="keywords" 
       content="social, media, accounts, owned, by, of, qasim mughal, qasim26mughal, @qasim26mughal">
     <meta name="title" content="@qasim26mughal social accounts">
-    <meta name="url" content="https://qasim26mughal.github.io/qasim26mughal/">
+    <meta name="url" content="https://qasim26mughal.github.io/qasim26mughal/">
+
     <meta name="image" 
       content="https://github.com/qasim26mughal/qasim26mughal/blob/qasim26mughal/Photos/Website%20Card.jpg?raw=true">
     <meta name="og:image" 
@@ -171,7 +172,7 @@
 
       <div class="container">
         <img class="profile-photo" 
-              src="Photos/YouTube.jpg" 
+              src="Photos/YouTube.png" 
               alt="Loading photo">
         <div class="username">qasim26mughal</div>
         <div>
